@@ -17,6 +17,8 @@
   <Contents>
     <File name="./EmptyDestructorRule.cs" subtype="Code" buildaction="Compile" />
     <File name="./IDisposableWithDestructorWithoutSuppressFinalizeRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="./UseStringEmptyRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Gendarme.Rules.Performance.xml.in" subtype="Code" buildaction="Nothing" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
